--- a/vfc2/angular-src/src/index.html
+++ b/vfc2/angular-src/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularSrc</title>
+  <title>Virtual Food Court</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <base href="/">
 </body>
 </html>
